--- a/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj.filters
+++ b/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj.filters
@@ -266,5 +266,8 @@
     <ClInclude Include="Collision.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="OBJECT.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
