--- a/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
+++ b/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
@@ -88,6 +88,8 @@
   <ItemGroup>
     <ClCompile Include="Barrel.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="Drum.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Floor.cpp" />
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -171,6 +173,8 @@
   <ItemGroup>
     <ClInclude Include="Barrel.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="Drum.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Floor.h" />
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="OBJECT.h" />
