--- a/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
+++ b/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
@@ -87,6 +87,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Barrel.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Drum.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -172,6 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Barrel.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Drum.h" />
     <ClInclude Include="Enemy.h" />
