--- a/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
+++ b/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="engine\assets\circle.png" />
@@ -184,6 +185,7 @@
     <ClInclude Include="OBJECT.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
