クリア画面追加

--- a/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
+++ b/DonkeyKong/DonkeyKong/DonkeyKong.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="Barrel.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Clear.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Drum.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -96,6 +97,7 @@
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Reddy.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
@@ -176,6 +178,7 @@
   <ItemGroup>
     <ClInclude Include="Barrel.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Clear.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Drum.h" />
     <ClInclude Include="Enemy.h" />
@@ -184,6 +187,7 @@
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="OBJECT.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Reddy.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
