--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -75,9 +75,6 @@
     <ClCompile Include="Player.cpp">
       <Filter>Player</Filter>
     </ClCompile>
-    <ClCompile Include="ChangeSceneKey.cpp">
-      <Filter>System</Filter>
-    </ClCompile>
     <ClCompile Include="PlayerMove.cpp">
       <Filter>Player</Filter>
     </ClCompile>
@@ -113,6 +110,12 @@
     </ClCompile>
     <ClCompile Include="CClearManager.cpp">
       <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="CharacterController.cpp">
+      <Filter>System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
