--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -58,6 +58,9 @@
     <Filter Include="Enemy">
       <UniqueIdentifier>{4ccd07dc-41b8-4bfe-8c42-c04224222186}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Stage">
+      <UniqueIdentifier>{c993d752-0755-49d6-a107-1ac0519bb604}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -108,9 +111,6 @@
     <ClCompile Include="ClearKeyEvent.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="CClearManager.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
     <ClCompile Include="Scene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
@@ -119,6 +119,15 @@
     </ClCompile>
     <ClCompile Include="Collision.cpp">
       <Filter>Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyManager.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="ClearManager.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Goblin.cpp">
+      <Filter>Enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -385,6 +394,12 @@
     </ClInclude>
     <ClInclude Include="Collision.h">
       <Filter>Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyManager.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Goblin.h">
+      <Filter>Enemy</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
