--- a/Dungeon/Dungeon/Dungeon.vcxproj
+++ b/Dungeon/Dungeon/Dungeon.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MapRead.cpp" />
     <ClCompile Include="MenuKeyEvent.cpp" />
     <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -196,6 +197,7 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="MapRead.h" />
     <ClInclude Include="MenuKeyEvent.h" />
     <ClInclude Include="MenuManager.h" />
     <ClInclude Include="Noncopyable.h" />
