--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="Goblin.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="MapRead.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico">
@@ -400,6 +403,9 @@
     </ClInclude>
     <ClInclude Include="Goblin.h">
       <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="MapRead.h">
+      <Filter>Stage</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
