--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -132,6 +132,12 @@
     <ClCompile Include="MapRead.cpp">
       <Filter>Stage</Filter>
     </ClCompile>
+    <ClCompile Include="Floor.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerCamera.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico">
@@ -406,6 +412,12 @@
     </ClInclude>
     <ClInclude Include="MapRead.h">
       <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="Floor.h">
+      <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerCamera.h">
+      <Filter>Player</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
