--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="MiniMap.cpp">
       <Filter>Stage</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico">
@@ -413,7 +416,7 @@
     <ClInclude Include="MiniMap.h">
       <Filter>Stage</Filter>
     </ClInclude>
-    <ClInclude Include="MapState.h">
+    <ClInclude Include="Scroll.h">
       <Filter>Stage</Filter>
     </ClInclude>
   </ItemGroup>
