敵も動いた

--- a/Dungeon/Dungeon/Dungeon.vcxproj
+++ b/Dungeon/Dungeon/Dungeon.vcxproj
@@ -101,11 +101,13 @@
     <ClCompile Include="MapRead.cpp" />
     <ClCompile Include="MenuKeyEvent.cpp" />
     <ClCompile Include="MenuManager.cpp" />
+    <ClCompile Include="MiniGoblin.cpp" />
     <ClCompile Include="MiniMap.cpp" />
+    <ClCompile Include="MiniMapPlayer.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerMove.cpp" />
     <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Scroll.cpp" />
     <ClCompile Include="Staircase.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="TitleKeyEvent.cpp" />
@@ -198,10 +200,13 @@
     <ClInclude Include="GameApplication.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="GoblinMove.h" />
     <ClInclude Include="MapRead.h" />
     <ClInclude Include="MenuKeyEvent.h" />
     <ClInclude Include="MenuManager.h" />
+    <ClInclude Include="MiniGoblin.h" />
     <ClInclude Include="MiniMap.h" />
+    <ClInclude Include="MiniMapPlayer.h" />
     <ClInclude Include="Noncopyable.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
