--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -135,8 +135,14 @@
     <ClCompile Include="MiniMap.cpp">
       <Filter>Stage</Filter>
     </ClCompile>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Scroll.cpp">
       <Filter>Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniMapPlayer.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniGoblin.cpp">
+      <Filter>Enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -418,6 +424,15 @@
     </ClInclude>
     <ClInclude Include="Scroll.h">
       <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniMapPlayer.h">
+      <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniGoblin.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GoblinMove.h">
+      <Filter>Enemy</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
