--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="MiniGoblin.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="Wall.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico">
@@ -433,6 +436,9 @@
     </ClInclude>
     <ClInclude Include="GoblinMove.h">
       <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Wall.h">
+      <Filter>Stage</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
