--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -129,9 +129,6 @@
     <ClCompile Include="Floor.cpp">
       <Filter>Stage</Filter>
     </ClCompile>
-    <ClCompile Include="Staircase.cpp">
-      <Filter>Stage</Filter>
-    </ClCompile>
     <ClCompile Include="MiniMap.cpp">
       <Filter>Stage</Filter>
     </ClCompile>
@@ -145,6 +142,12 @@
       <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Wall.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="UpStairs.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="DownStairs.cpp">
       <Filter>Stage</Filter>
     </ClCompile>
   </ItemGroup>
@@ -419,9 +422,6 @@
     <ClInclude Include="Floor.h">
       <Filter>Stage</Filter>
     </ClInclude>
-    <ClInclude Include="Staircase.h">
-      <Filter>Stage</Filter>
-    </ClInclude>
     <ClInclude Include="MiniMap.h">
       <Filter>Stage</Filter>
     </ClInclude>
@@ -439,6 +439,15 @@
     </ClInclude>
     <ClInclude Include="Wall.h">
       <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="UpStairs.h">
+      <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="DownStairs.h">
+      <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerAttack.h">
+      <Filter>Player</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
