--- a/Dungeon/Dungeon/Dungeon.vcxproj
+++ b/Dungeon/Dungeon/Dungeon.vcxproj
@@ -99,6 +99,8 @@
     <ClCompile Include="Floor.cpp" />
     <ClCompile Include="GameApplication.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="GameOverKeyEvent.cpp" />
+    <ClCompile Include="GameOverManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MapRead.cpp" />
     <ClCompile Include="MenuKeyEvent.cpp" />
@@ -117,6 +119,7 @@
     <ClCompile Include="Scroll.cpp" />
     <ClCompile Include="SnakeCopter.cpp" />
     <ClCompile Include="SnakeCopterAnimation.cpp" />
+    <ClCompile Include="SnakeCopterAttack.cpp" />
     <ClCompile Include="SnakeCopterMove.cpp" />
     <ClCompile Include="TitleKeyEvent.cpp" />
     <ClCompile Include="TitleManager.cpp" />
@@ -213,6 +216,8 @@
     <ClInclude Include="Floor.h" />
     <ClInclude Include="GameApplication.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GameOverKeyEvent.h" />
+    <ClInclude Include="GameOverManager.h" />
     <ClInclude Include="MapRead.h" />
     <ClInclude Include="MenuKeyEvent.h" />
     <ClInclude Include="MenuManager.h" />
@@ -231,6 +236,7 @@
     <ClInclude Include="Scroll.h" />
     <ClInclude Include="SnakeCopter.h" />
     <ClInclude Include="SnakeCopterAnimation.h" />
+    <ClInclude Include="SnakeCopterAttack.h" />
     <ClInclude Include="SnakeCopterMove.h" />
     <ClInclude Include="Staircase.h" />
     <ClInclude Include="TitleKeyEvent.h" />
